# visionFlow

./: .env  .gitignore  README.md  camera_simple_app.spec  detect_test_app.spec  device_lister.py  device_lister.spec  device_lister_ui.py  device_lister_ui.spec  kiosk_demo.spec  main.py  pyproject.toml
.claude/: settings.local.json
scripts/: build_device_lister.ps1  build_device_lister_ui.ps1  build_kiosk_demo.ps1
src/visionflow/: main.py
src/visionflow/pipeline/: __init__.py  bus.py  packet.py
src/visionflow/processors/: face_detector.py  pose_landmarker.py
src/visionflow/sample/: detect_test.py
src/visionflow/sample/camera/: build_camera_map.py  camera_viewer.py  dual_cam.py  list_cameras.py  list_id.py  list_resolutions.py  readme.md  simple.py
src/visionflow/sample/face_detection/: simple.py  simple_landmark.py  transform_3d.py
src/visionflow/sample/pose/: simple.py
src/visionflow/sources/: camera_source.py
src/visionflow/utils/: __init__.py  draw_utils.py  etc.py  face_geometry.py  image.py
src/visionflow/workers/: mp_face_detector_async_worker.py  mp_face_landmarker_async_worker.py  mp_pose_landmarker_async_worker.py  sync_inference_worker.py
src/voiceFlow/: readme.md
src/voiceFlow/pipeline/: packet.py
src/voiceFlow/processors/: __init__.py  miso_stt_asr.py
src/voiceFlow/sample/: asr_realtime.py  audiomi_asr_realtime.py  list_microphones.py  mic_level_monitor.py  simple_mic_test.py
src/voiceFlow/sources/: audiomi_source.py  microphone_source.py
src/voiceFlow/utils/: __init__.py  audio_device.py  env.py  text.py
src/voiceFlow/vendors/miso_stt/: __init__.py  transcriber.py
src/voiceFlow/vendors/miso_stt/backends/: __init__.py  ct2.py  hf_generate.py  hf_pipeline.py
src/voiceFlow/vendors/miso_stt/core/: __init__.py  audio.py  config.py  filters.py  model_resolver.py  timeline.py  types.py
src/voiceFlow/workers/: accumulate_asr_worker.py  asr_worker.py
