[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visionflow"
version = "0.1.0"
description = "Realtime vision pipeline (camera → processors → render)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.0.0",
    "cv2-enumerate-cameras>=1.3.3",
    "librosa>=0.11.0",
    "mediapipe>=0.10.32",
    "numpy>=1.26,<3",
    "opencv-python>=4.8",
    "psutil>=7.2.2",
    "pygame>=2.5",
    "pyside6>=6.10.2",
    "python-dotenv>=1.2.1",
    "scipy>=1.11.0",
    "soundfile>=0.13.1",
    "sounddevice>=0.4.6",
    "faster-whisper>=1.0.0",
    "torch>=2.4.0",
    "transformers>=4.46.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[project.scripts]
visionflow = "visionflow.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
